adding dockerfile targets and extra composes

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ PROJECT_NAME=API
 MONGO_URL=mongodb:27017
 MONGO_USER=mongo
 MONGO_PASS=changethis
+
+MONGO_INITDB_DATABASE: "icon"
+MONGO_INITDB_ROOT_USERNAME: "mongo"
+MONGO_INITDB_ROOT_PASSWORD: "changethis"
