--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,14 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Test
-        id: docker_test
-        uses: docker/build-push-action@v2
-        with:
-          builder: ${{ steps.buildx.outputs.name }}
-          context: .
-          file: ./Dockerfile
-          target: test
+      - name: Build the stack
+        run: docker-compose -f docker-compose.yml -f docker-compose.test.yml up -d
+
+      - name: Check running containers
+        run: docker-compose -f docker-compose.yml -f docker-compose.test.yml ps
+
+      - name: Check logs
+        run: docker-compose -f docker-compose.yml -f docker-compose.test.yml logs rest
+
+      - name: Run test suite
+        run: docker-compose -f docker-compose.yml -f docker-compose.test.yml run rest pytest
