--- a/tests/.env.local
+++ b/tests/.env.local
@@ -1,12 +1,7 @@
-
-SERVER_HOST=localhost
-DOMAIN=localhost
-PROJECT_NAME=API
-
 # Mongo
-MONGO_HOST=0.0.0.0:27017
-MONGO_USERNAME=mongo
-MONGO_PASSWORD=changethis
+ICON_REST_MONGO_HOST=0.0.0.0:27017
+ICON_REST_MONGO_USERNAME=mongo
+ICON_REST_MONGO_PASSWORD=changethis
 
 MONGO_INITDB_DATABASE=icon
 MONGO_INITDB_ROOT_USERNAME=mongo
