--- a/tests/.env.test
+++ b/tests/.env.test
@@ -1,10 +1,7 @@
-DOMAIN=localhost
-PROJECT_NAME=API
-
 # Mongo
-MONGO_URL=mongodb:27017
-MONGO_USER=mongo
-MONGO_PASS=changethis
+ICON_REST_MONGO_HOST=mongodb:27017
+ICON_REST_MONGO_USERNAME=mongo
+ICON_REST_MONGO_PASSWORD=changethis
 
 MONGO_INITDB_DATABASE=icon
 MONGO_INITDB_ROOT_USERNAME=mongo
