--- a/.github/workflows/release-dockerhub.yml
+++ b/.github/workflows/release-dockerhub.yml
@@ -35,6 +35,10 @@ jobs:
         run: |
           echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
 
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
