refactor env prefixes out of config and gh wf

--- a/tests/.env.local
+++ b/tests/.env.local
@@ -1,7 +1,7 @@
 # Mongo
-ICON_REST_MONGO_HOST=0.0.0.0:27017
-ICON_REST_MONGO_USERNAME=mongo
-ICON_REST_MONGO_PASSWORD=changethis
+ICON_REST_API_MONGO_HOST=0.0.0.0:27017
+ICON_REST_API_MONGO_USERNAME=mongo
+ICON_REST_API_MONGO_PASSWORD=changethis
 
 MONGO_INITDB_DATABASE=icon
 MONGO_INITDB_ROOT_USERNAME=mongo
